--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^9.7.2",
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@mantine/core": "^7.2.2",
     "@mantine/hooks": "^7.2.2",
     "@tabler/icons-react": "^2.41.0",
+    "@types/emoji-mart": "^3.0.13",
+    "cheerio": "^1.0.0-rc.12",
+    "emoji-mart": "^5.5.2",
     "next": "14.0.3",
     "octokit": "^3.1.2",
     "react": "^18",
