--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
     "@mantine/core": "^7.2.2",
+    "@mantine/dates": "^7.2.2",
+    "@mantine/form": "^7.2.2",
     "@mantine/hooks": "^7.2.2",
     "@tabler/icons-react": "^2.41.0",
-    "@types/emoji-mart": "^3.0.13",
-    "cheerio": "^1.0.0-rc.12",
+    "dayjs": "^1.11.10",
     "emoji-mart": "^5.5.2",
     "next": "14.0.3",
     "octokit": "^3.1.2",
+    "puppeteer": "^21.5.2",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/emoji-mart": "^3.0.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
