--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@ducanh2912/next-pwa": "^9.7.2",
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
-    "@mantine/core": "^7.2.2",
-    "@mantine/dates": "^7.2.2",
-    "@mantine/form": "^7.2.2",
-    "@mantine/hooks": "^7.2.2",
+    "@mantine/core": "^7.3.2",
+    "@mantine/dates": "^7.3.2",
+    "@mantine/form": "^7.3.2",
+    "@mantine/hooks": "^7.3.2",
+    "@mantine/notifications": "^7.3.2",
     "@tabler/icons-react": "^2.41.0",
     "dayjs": "^1.11.10",
     "emoji-mart": "^5.5.2",
